<resources>
    <string name="app_name">MalAttendanceApp</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">08h2Kz2AUhBL4nJMsXfMv9gmb8JuPoYENOezTDF0</string>
    <string name="parse_client_key">PZCtUsyn2c48t9nSL4YfUdxJk9U1pEqsciBCS5KO</string>

    <string name="MalAttendance">Mal Attendance</string>

    <string name="EnterName">Enter Name</string>
    <string name="EnterPassword">Enter Password</string>

    <string name="Login">Login</string>
    <string name="Welcome">Welcome</string>
    <string name="LastStatus">Your Last Status is</string>

    <string name="CheckIn">Check In</string>
    <string name="CheckOut">Check Out</string>
    <string name="google_app_id">AIzaSyAFP5cmYV2dA0G4Po5zuRvaQQuONfYzQQ4</string>
</resources>
